Additional unit test and fix for linebreaks in messages.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 .leafHeader {
     margin: 0;
+    margin-top: 1em;
     padding: 0;
     font-size: .75em;
     color: #999999;
